Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44332

Windows: Wrong mouse leave event generated when Qt is running as a low integrity process with QWindow parented on native window (fex as browser plugin)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.13.2
    • 5.4.0
    • QPA: Windows
    • None
    • Windows 7 x64, Internet Explorer
    • <unknown>

      When Qt runs in process with low integrity level (https://msdn.microsoft.com/en-us/library/bb625963.aspx) and place QWindow to HWND from less restricted process, it could generate wrong mouse leave event on mouse button up, even if mouse still over window.

      Example of such situation is when Qt is used in web browser plugin. Most browsers runs plug-ins in separate processes, but Internet Explorer go further and runs plug-ins in low integrity level process (i.e. restricted).

      To see the problem, you could:
      1) Install .msi from https://github.com/RSATom/WebChimera/releases/tag/v.0.2.3
      2) Open http://rsatom.github.io/WebChimera/demos/basic/basic_1.htm with Intenet Explorer
      3) Move mouse over browser plugin window - play/pause button will show at bottom.
      4) If you click on button - it will hide (since QuickView will get wrong "mouse leave" event).
      5) If you open same link on Firefox - and click on button - it will not hide.

      Patch for this issue already created: https://codereview.qt-project.org/#/c/104523/ (I will add reference to it at evening) - but needs approvement.

      Thanks.

        For Gerrit Dashboard: QTBUG-44332
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            rsatom Sergey Radionov
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes