Win: fix wrong mouse leave event generation

When Qt runs in process with low integrity level,
and place child QWindow to HWND from less restricted process,
ChildWindowFromPointEx could fail with ERROR_ACCESS_DENIED
and QWindowsScreen::windowAt will return 0 despite mouse is on window.

Task-number: QTBUG-44332
Change-Id: I07e1594b90cbde8a9496f8d53ef247a7c69d8715
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>

cregit: 34ea269b3b173498312b0203d6875ef3b4ba0253 https://github.com/qt/qtbase/commit/34ea269b3b173498312b0203d6875ef3b4ba0253